[workspace]

members = [
    "hello-world/native/program",
    "hello-world/native/cli",
    "hello-world/anchor/programs/*",
    "hello-world-counter/program",
    "hello-world-counter/cli",
    "hello-world-struct/program",
    "hello-world-notebook/program",
    "basics/program-derived-addresses/anchor/programs/*",
    "basics/program-derived-addresses/native/program",
    "solana-program-part2/compare-ts-rust/cli",
    "solana-program-part2/invoke-helloworld/cli",
    "solana-program-part2/invoke-helloworld/program",
    "solana-program-part2/mint-token-info/cli",
    "solana-program-part2/mint-token-info/program",
]
exclude = []
