[package]
name = "program-derived-addresses"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "0.10.3"
solana-program = "1.16.12"
thiserror = "1.0.47"
num-derive = "0.4.0"
num-traits = "0.2.16"
